--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,7 +3,7 @@ interface Props {
 	title: string;
 	description: string
 }
-
+import '@fontsource-variable/onest';
 const { title, description } = Astro.props;
 ---
 
