--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,8 @@
 ---
 import Layout from '../layouts/Layout.astro';
+import { calculateAge } from '../utils/calculateAge'
+
+const birthdate = new Date('2003-08-21')
 ---
 
 <Layout title="Agustín Gómez | Desarrollador web" description="">
