--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -4,6 +4,7 @@ interface Props {
 	description: string
 }
 import '@fontsource-variable/onest';
+import Header from '../components/Header.astro';
 const { title, description } = Astro.props;
 ---
 
@@ -17,13 +18,19 @@ const { title, description } = Astro.props;
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
 	</head>
-	<body>
+	<body class="bg-bgColor text-textColor">
+		<div class="
+			absolute top-0 z-[-2] h-screen w-screen 
+			bg-neutral-950 
+			bg-[radial-gradient(ellipse_70%_100%_at_50%_-5%,rgba(147,182,214,0.5),rgba(1,9,17,1))]"
+		/>
+		<Header />
 		<slot />
 	</body>
 </html>
 <style is:global>
 	html {
 		font-family: "Onest Variable", system-ui, sans-serif;
-		background: #13151a;
+		scroll-behavior: smooth;
 	}
 </style>
