--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -20,7 +20,7 @@ const { title, description } = Astro.props;
 	</head>
 	<body class="bg-bgColor text-textColor">
 		<div class="
-			absolute top-0 z-[-2] h-screen w-screen 
+			absolute top-0 z-[-2] h-screen w-full 
 			bg-neutral-950 
 			bg-[radial-gradient(ellipse_70%_100%_at_50%_-5%,rgba(147,182,214,0.5),rgba(1,9,17,1))]"
 		/>
