--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,6 +1,6 @@
-<header class="mt-6">
-    <nav>
-        <ul class="flex justify-center items-center gap-3 font-medium text-md">
+<header class="mt-6 sticky top-6 flex justify-center z-20">
+    <nav class="inline-block bg-darkAccent bg-opacity-80 backdrop-blur-sm rounded-full border border-lightAccent border-opacity-70 shadow-xl">
+        <ul class="flex justify-center items-center py-1 px-5 gap-3 font-medium text-sm md:text-md">
             <li class="hover:text-primary cursor-pointer transition-colors">Proyectos</li>
             <li class="hover:text-primary cursor-pointer transition-colors">Habilidades</li>
             <li class="hover:text-primary cursor-pointer transition-colors">Sobre mí</li>
