--- a/src/components/SectionTitle.astro
+++ b/src/components/SectionTitle.astro
@@ -4,5 +4,5 @@ const { title } = Astro.props
 
 <div class="flex items-center gap-3">
     <slot />
-    <h3 class="font-medium text-3xl">{title}</h3>
+    <h3 class="font-medium text-xl md:text-3xl">{title}</h3>
 </div>
