--- a/src/components/Button.astro
+++ b/src/components/Button.astro
@@ -1,3 +1,3 @@
-<button class={`py-1 px-3 bg-darkAccent rounded-full flex gap-2 items-center justify-center`}>
+<button class={`py-1 px-3 text-sm md:text-md bg-darkAccent rounded-full flex gap-2 items-center justify-center`}>
     <slot />
 </button>
