--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -43,16 +43,15 @@ const icons = {
     cloudinary: CloudinaryIcon
 };
 
-const { title, description, code, demo, image } = Astro.props;
+const { title, description, code, demo, image, dataAos, dataAosDelay } = Astro.props;
 const tech: Array<keyof typeof icons> = Astro.props.tech;
-
 ---
 
-<div class="flex flex-col md:flex-row gap-5">
+<div class="flex flex-col md:flex-row gap-5" data-aos={dataAos} data-aos-once="true" data-aos-delay={dataAosDelay ? dataAosDelay : 200}>
     <div
         class="block w-full md:w-96 h-64 bg-gradient-to-tr from-secondary to-primary rounded-xl overflow-hidden relative"
     >
-    <Image src={image} width={250} height={250} class="absolute bottom-0 right-0 h-full w-full object-cover translate-x-4 translate-y-4 rounded-tl-xl" alt="" />
+    <Image src={image} width={250} height={250} class="absolute bottom-0 right-0 h-full w-full object-cover object-left-top translate-x-4 translate-y-4 rounded-tl-xl hover:scale-105 transition-all" alt="" />
     </div>
     <div class="flex flex-col justify-between">
         <div>
