--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,6 +11,7 @@ import ProjectCard from "../components/ProjectCard.astro";
 import GithubIcon from "../icons/tech/Github.astro";
 import LinkedinIcon from "../icons/Linkedin.astro";
 import CurriculumIcon from "../icons/Curriculum.astro";
+import "aos/dist/aos.css";
 
 const birthdate = new Date("2003-08-21");
 ---
@@ -45,7 +46,7 @@ const birthdate = new Date("2003-08-21");
 					description="Juego de cartas en línea inspirado en La Conga, que incluye autenticación de usuarios, modos de juego contra IA y multijugador, creación de partidas públicas y privadas, además de perfiles de usuario con estadísticas y personalización."
 					code="https://github.com/AgustinGomezDev/conga"
 					demo="#"
-					image="https://www.jacksonsquareshopping.co.uk/wp-content/uploads/2016/12/placeholder-1920x1080.png"
+					image="https://indetectables.es/wp-content/uploads/2021/03/portada-proximamente.png"
 					tech={[
 						"nextjs",
 						"typescript",
@@ -55,13 +56,14 @@ const birthdate = new Date("2003-08-21");
 						"reactjs",
 						"tailwindcss",
 					]}
+					dataAos="fade-left"
 				/>
 				<ProjectCard
 					title="AnunciosUy"
 					description="Plataforma de anuncios clasificados con autenticación de usuarios y funcionalidades para publicar, buscar, editar y eliminar anuncios."
 					code="https://github.com/AgustinGomezDev/anunciosuy"
 					demo="https://www.anunciosuy.com/"
-					image="https://www.jacksonsquareshopping.co.uk/wp-content/uploads/2016/12/placeholder-1920x1080.png"
+					image="/public/anunciosuy.webp"
 					tech={[
 						"vite",
 						"javascript",
@@ -74,13 +76,15 @@ const birthdate = new Date("2003-08-21");
 						"jsonwebtoken",
 						"mongodb",
 					]}
+					dataAos="fade-left"
+					dataAosDelay="400"
 				/>
 				<ProjectCard
 					title="Tokytech"
 					description="E-commerce desarrollado con tecnologías frontend y backend, que integra autenticación de usuarios, sistema de sesiones, diseño responsivo, carrito de compras, filtrado de productos por categoría y ordenamiento por precio."
 					code="https://github.com/AgustinGomezDev/tokytech"
 					demo="https://tokytech.vercel.app/"
-					image="https://www.jacksonsquareshopping.co.uk/wp-content/uploads/2016/12/placeholder-1920x1080.png"
+					image="/public/tokytech.webp"
 					tech={[
 						"vite",
 						"javascript",
@@ -95,20 +99,22 @@ const birthdate = new Date("2003-08-21");
 						"swagger",
 						"passport",
 					]}
+					dataAos="fade-left"
 				/>
 				<ProjectCard
 					title="Hackathon Cloudinary x Midudev"
 					description="Una aplicación que permite subir una foto y transformarla en una versión monstruosa, eligiendo entre varios personajes. Incluye cambio de fondo a escenarios tenebrosos, descarga de la imagen final y un minijuego interactivo mientras esperas la transformación."
 					code="https://github.com/AgustinGomezDev/hackathon-cloudinary"
 					demo="https://agdev-hackathon-cloudinary.vercel.app/"
-					image="https://www.jacksonsquareshopping.co.uk/wp-content/uploads/2016/12/placeholder-1920x1080.png"
+					image="/public/hackathon.webp"
 					tech={[
 						"cloudinary",
 						"nextjs",
 						"typescript",
 						"reactjs",
-						"tailwindcss"
+						"tailwindcss",
 					]}
+					dataAos="fade-left"
 				/>
 			</div>
 		</SectionContainer>
@@ -116,3 +122,8 @@ const birthdate = new Date("2003-08-21");
 		<!-- <SectionTitle title="Habilidades"><Skill class="size-6" />  </SectionTitle> -->
 	</main>
 </Layout>
+
+<script>
+	import AOS from "aos";
+	AOS.init();
+</script>
