fix images path

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -63,7 +63,7 @@ const birthdate = new Date("2003-08-21");
 					description="Plataforma de anuncios clasificados con autenticación de usuarios y funcionalidades para publicar, buscar, editar y eliminar anuncios."
 					code="https://github.com/AgustinGomezDev/anunciosuy"
 					demo="https://www.anunciosuy.com/"
-					image="/public/anunciosuy.webp"
+					image="/anunciosuy.webp"
 					tech={[
 						"vite",
 						"javascript",
@@ -84,7 +84,7 @@ const birthdate = new Date("2003-08-21");
 					description="E-commerce desarrollado con tecnologías frontend y backend, que integra autenticación de usuarios, sistema de sesiones, diseño responsivo, carrito de compras, filtrado de productos por categoría y ordenamiento por precio."
 					code="https://github.com/AgustinGomezDev/tokytech"
 					demo="https://tokytech.vercel.app/"
-					image="/public/tokytech.webp"
+					image="/tokytech.webp"
 					tech={[
 						"vite",
 						"javascript",
@@ -106,7 +106,7 @@ const birthdate = new Date("2003-08-21");
 					description="Una aplicación que permite subir una foto y transformarla en una versión monstruosa, eligiendo entre varios personajes. Incluye cambio de fondo a escenarios tenebrosos, descarga de la imagen final y un minijuego interactivo mientras esperas la transformación."
 					code="https://github.com/AgustinGomezDev/hackathon-cloudinary"
 					demo="https://agdev-hackathon-cloudinary.vercel.app/"
-					image="/public/hackathon.webp"
+					image="/hackathon.webp"
 					tech={[
 						"cloudinary",
 						"nextjs",
