--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -21,15 +21,19 @@ const birthdate = new Date("2003-08-21");
 		<SectionContainer class="mt-11" id="hero">
 			<h1 class="font-extrabold text-5xl md:text-7xl">Agustín Gómez</h1>
 			<h2 class="font-medium text-2xl md:text-4xl">Desarrollador web</h2>
-			<div class="flex items-center gap-3 mt-2">
-				<Button>
-					<GithubIcon class="size-6" />
-					<span>Github</span>
-				</Button>
-				<Button>
-					<LinkedinIcon class="size-6" />
-					<span>LinkedIn</span>
-				</Button>
+			<div class="flex flex-col md:flex-row items-start md:items-center gap-3 mt-2 ">
+				<a href="https://github.com/AgustinGomezDev" target="_blank">
+					<Button>
+						<GithubIcon class="size-6" />
+						<span>Github</span>
+					</Button>
+				</a>
+				<a href="https://www.linkedin.com/in/agustingomezblanco/" target="_blank">
+					<Button>
+						<LinkedinIcon class="size-6" />
+						<span>LinkedIn</span>
+					</Button>
+				</a>
 				<Button>
 					<CurriculumIcon class="size-5" />
 					<span>Curriculum</span>
