add header observer

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -40,7 +40,7 @@ const birthdate = new Date("2003-08-21");
 				</Button>
 			</div>
 		</SectionContainer>
-		<SectionContainer class="mt-11" id="projects">
+		<SectionContainer class="mt-11" id="proyectos">
 			<SectionTitle title="Proyectos"
 				><Code class="size-6" />
 			</SectionTitle>
