--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -52,7 +52,7 @@ const tech: Array<keyof typeof icons> = Astro.props.tech;
     <div
         class="block w-full md:w-96 h-64 bg-gradient-to-tr from-secondary to-primary rounded-xl overflow-hidden relative"
     >
-    <Image src={image} width={250} height={250} class="absolute bottom-0 right-0 h-full w-full object-cover object-left-top translate-x-4 translate-y-4 rounded-tl-xl hover:scale-105 transition-all" alt="" />
+    <Image loading="eager" src={image} width={250} height={250} class="absolute bottom-0 right-0 h-full w-full object-cover object-left-top translate-x-4 translate-y-4 rounded-tl-xl hover:scale-105 transition-all" alt={`Imagen del proyecto ${title}`}/>
     </div>
     <div class="flex flex-col gap-3 justify-between">
         <div>
