--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -5,6 +5,7 @@ interface Props {
 }
 import '@fontsource-variable/onest';
 import Header from '../components/Header.astro';
+import Footer from '../components/Footer.astro';
 const { title, description } = Astro.props;
 ---
 
@@ -26,6 +27,7 @@ const { title, description } = Astro.props;
 		/>
 		<Header />
 		<slot />
+		<Footer />
 	</body>
 </html>
 <style is:global>
