--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,7 +18,7 @@ const birthdate = new Date("2003-08-21");
 
 <Layout title="Agustín Gómez | Desarrollador web" description="">
 	<main class="px-4">
-		<SectionContainer class="mt-11" id="hero">
+		<SectionContainer class="mt-11 section" id="inicio">
 			<h1 class="font-extrabold text-5xl md:text-7xl">Agustín Gómez</h1>
 			<h2 class="font-medium text-2xl md:text-4xl">Desarrollador web</h2>
 			<div class="flex flex-col md:flex-row items-start md:items-center gap-3 mt-2 ">
@@ -40,9 +40,9 @@ const birthdate = new Date("2003-08-21");
 				</Button>
 			</div>
 		</SectionContainer>
-		<SectionContainer class="mt-11" id="proyectos">
-			<SectionTitle title="Proyectos"
-				><Code class="size-6" />
+		<SectionContainer class="mt-11 section" id="proyectos">
+			<SectionTitle title="Proyectos">
+				<Code class="size-6" />
 			</SectionTitle>
 			<div class="mt-6 flex flex-col gap-6">
 				<ProjectCard
