--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -7,9 +7,9 @@ import CurriculumIcon from "../icons/Curriculum.astro";
 
 <footer class="w-full mx-auto container lg:max-w-4xl md:max-w-xl mt-11">
     <hr class="border-darkAccent"/>
-    <div class="flex gap-3 justify-between items-center my-6">
+    <div class="flex flex-col md:flex-row gap-3 justify-between items-center my-6">
         <p class="opacity-50">Agustín Gómez - 2024</p>
-        <nav class="flex gap-3">
+        <nav class="flex flex-col md:flex-row gap-3">
             <a href="https://github.com/AgustinGomezDev" target="_blank">
                 <Button>
                     <GithubIcon class="size-6" />
