--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -46,9 +46,7 @@
         const observer = new IntersectionObserver(
             (entries) => {
                 entries.forEach((entry) => {
-                    const navItem = document.querySelector(
-                        `#nav-${entry.target.id}`,
-                    );
+                    const navItem = document.querySelector(`#nav-${entry.target.id}`);
                     if (entry.isIntersecting && navItem) {
                         navItems.forEach((item) =>
                             item.classList.remove("active"),
@@ -57,7 +55,7 @@
                     }
                 });
             },
-            { threshold: 0.1 },
+            { threshold: 0.6 },
         );
 
         sections.forEach((section) => observer.observe(section));
