--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,7 +16,7 @@ import About from "../components/About.astro";
 
 <Layout title="Agustín Gómez | Desarrollador web" description="">
 	<main class="px-4">
-		<SectionContainer class="section" id="inicio">
+		<SectionContainer class="section">
 			<h1 class="font-extrabold text-5xl md:text-7xl">Agustín Gómez</h1>
 			<h2 class="font-medium text-2xl md:text-4xl">Desarrollador web</h2>
 			<div class="flex flex-col md:flex-row items-start md:items-center gap-3 mt-2 ">
