change astroIcon name

--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -11,7 +11,7 @@ import TailwindcssIcon from "../icons/tech/Tailwindcss.astro";
 import BootstrapIcon from "../icons/tech/Bootstrap.astro";
 import SassIcon from "../icons/tech/Sass.astro";
 import ReactjsIcon from "../icons/tech/Reactjs.astro";
-import AstroIcon from "../icons/tech/Astro.astro";
+import AstroIcon from "../icons/tech/AstroIcon.astro";
 
 import NodejsIcon from "../icons/tech/Nodejs.astro";
 import ExpressjsIcon from "../icons/tech/Expressjs.astro";
