--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -65,7 +65,7 @@ const tools = {
 ---
 
 <div class="mt-6 grid grid-cols-3 gap-5 gap-y-12">
-    <div class="flex flex-col items-center gap-2" data-aos="fade-in" data-aos-once="true" data-aos-delay="200">
+    <div class="flex flex-col items-center gap-2" data-aos="fade-in" data-aos-once="true" data-aos-delay={200 * 1}>
         <h4 class="md:text-xl">Programación</h4>
         <div class="flex items-center gap-3">
             {
@@ -78,7 +78,7 @@ const tools = {
             }
         </div>
     </div>
-    <div class="flex flex-col items-center gap-2" data-aos="fade-in" data-aos-once="true" data-aos-delay="350">
+    <div class="flex flex-col items-center gap-2" data-aos="fade-in" data-aos-once="true" data-aos-delay={200 * 2}>
         <h4 class="md:text-xl">Frontend</h4>
         <div class="flex items-center gap-3">
             {
@@ -91,7 +91,7 @@ const tools = {
             }
         </div>
     </div>
-    <div class="flex flex-col items-center gap-2" data-aos="fade-in" data-aos-once="true" data-aos-delay="500">
+    <div class="flex flex-col items-center gap-2" data-aos="fade-in" data-aos-once="true" data-aos-delay={200 * 3}>
         <h4 class="md:text-xl">Backend</h4>
         <div class="flex items-center gap-3">
             {
@@ -104,7 +104,7 @@ const tools = {
             }
         </div>
     </div>
-    <div class="flex flex-col items-center gap-2" data-aos="fade-in" data-aos-once="true" data-aos-delay="450">
+    <div class="flex flex-col items-center gap-2" data-aos="fade-in" data-aos-once="true" data-aos-delay={200 * 4}>
         <h4 class="md:text-xl">Bases de datos</h4>
         <div class="flex items-center gap-3">
             {
@@ -117,7 +117,7 @@ const tools = {
             }
         </div>
     </div>
-    <div class="flex flex-col items-center gap-2" data-aos="fade-in" data-aos-once="true" data-aos-delay="700">
+    <div class="flex flex-col items-center gap-2" data-aos="fade-in" data-aos-once="true" data-aos-delay={200 * 5}>
         <h4 class="md:text-xl">Herramientas</h4>
         <div class="flex items-center gap-3">
             {
