--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -64,7 +64,7 @@ const tools = {
 };
 ---
 
-<div class="mt-6 grid grid-cols-3 gap-5 gap-y-12">
+<div class="mt-6 grid grid-cols-1 md:grid-cols-3 gap-5 md:gap-y-12">
     <div class="flex flex-col items-center gap-2" data-aos="fade-in" data-aos-once="true" data-aos-delay={200 * 1}>
         <h4 class="md:text-xl">Programación</h4>
         <div class="flex items-center gap-3">
