typo: from jsonwebtoken to JWT

--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -37,7 +37,7 @@ const icons = {
     axios: AxiosIcon,
     firebase: FirebaseIcon,
     javascript: JavascriptIcon,
-    jsonwebtoken: JsonwebtokenIcon,
+    JWT: JsonwebtokenIcon,
     chai: ChaiIcon,
     swagger: SwaggerIcon,
     passport: PassportIcon,
