--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -48,7 +48,7 @@ const frontend = {
 const backend = {
     nodejs: NodejsIcon,
     expressjs: ExpressjsIcon,
-    jsonwebtoken: JsonwebtokenIcon
+    JWT: JsonwebtokenIcon
 };
 
 const database = {
