--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -76,7 +76,7 @@ import Skills from "../components/Skills.astro";
 						"reactjs",
 						"tailwindcss",
 						"firebase",
-						"jsonwebtoken",
+						"JWT",
 						"mongodb",
 					]}
 					dataAos="fade-left"
@@ -96,7 +96,7 @@ import Skills from "../components/Skills.astro";
 						"express",
 						"reactjs",
 						"tailwindcss",
-						"jsonwebtoken",
+						"JWT",
 						"mongodb",
 						"chai",
 						"swagger",
