--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -48,7 +48,7 @@ import Skills from "../components/Skills.astro";
 					title="Conga"
 					description="Juego de cartas en línea inspirado en La Conga, que incluye autenticación de usuarios, modos de juego contra IA y multijugador, creación de partidas públicas y privadas, además de perfiles de usuario con estadísticas y personalización."
 					code="https://github.com/AgustinGomezDev/conga"
-					demo="#"
+					demo=""
 					image="https://indetectables.es/wp-content/uploads/2021/03/portada-proximamente.png"
 					tech={[
 						"nextjs",
