feat: auto theme checking prefers-color-scheme

--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -12,7 +12,7 @@ const birthdate = new Date("2003-08-21");
         <p>Desde entonces, he profundizado mis conocimientos con cursos y de manera autodidacta en <strong class="text-primary">JavaScript</strong>, <strong class="text-primary">React.js</strong>, <strong class="text-primary">Sass</strong> y <strong class="text-primary">Tailwind CSS</strong>. También del lado del  backend con <strong class="text-primary">Node.js</strong> y <strong class="text-primary">Express</strong>.</p>
         <p>Actualmente me encuentro trabajando con <strong class="text-primary">TypeScript</strong> y ampliando mis conocimientos de <strong class="text-primary">C#</strong>. Me gustaría también poder formarme en algunas habilidades complementarias como <strong class="text-primary">SEO</strong>, <strong class="text-primary">Copywriting</strong> y <strong class="text-primary">diseño UX/UI</strong>.</p>
     </div>
-    <div class="bg-gradient-to-tr from-secondary to-primary rounded-xl border border-lightAccent border-opacity-10 shadow-xl hover:rotate-6 transition-all hover:scale-90" data-aos="fade-left" data-aos-once="true" data-aos-delay={200}>
+    <div class="bg-gradient-to-tr from-secondary to-primary rounded-xl border border-accentPrimary border-opacity-10 shadow-xl hover:rotate-6 transition-all hover:scale-90" data-aos="fade-left" data-aos-once="true" data-aos-delay={200}>
         <Image loading='lazy' src="/profilePic.webp" width={250} height={250} alt="Foto de Agustín Gómez" class="rounded-xl" />
     </div>
 </div>
