--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -4,7 +4,7 @@
     data-aos-once="true"
 >
     <nav
-        class="bg-darkAccent bg-opacity-80 backdrop-blur-sm rounded-full border border-lightAccent border-opacity-70 shadow-xl flex justify-center items-center py-1 px-5 gap-3 font-medium text-sm md:text-md"
+        class="text-textColor bg-accentSecondary/80 backdrop-blur-sm rounded-full border border-accentPrimary border-opacity-70 shadow-xl flex justify-center items-center py-1 px-5 gap-3 font-medium text-sm md:text-md"
     >
         <a
             href="#proyectos"
