--- a/src/components/Tooltip.astro
+++ b/src/components/Tooltip.astro
@@ -3,5 +3,5 @@ const { text } = Astro.props
 ---
 
 <div class="relative">
-    <span class="absolute bottom-0 left-1/2 transform -translate-x-1/2 mb-8 px-2 py-1 text-textColor bg-darkAccent rounded text-sm opacity-0 group-hover:opacity-100 transition-opacity duration-200 capitalize">{text}</span>
+    <span class="absolute bottom-0 left-1/2 transform -translate-x-1/2 mb-8 px-2 py-1 text-textColor bg-accentSecondary rounded text-sm opacity-0 group-hover:opacity-100 transition-opacity duration-200 capitalize">{text}</span>
 </div>
