--- a/src/components/Button.astro
+++ b/src/components/Button.astro
@@ -1,3 +1,3 @@
-<button class={`py-2 px-5 text-sm md:text-md bg-darkAccent text-textColor rounded-full flex gap-2 items-center justify-center shadow-lg hover:shadow-xl transition-all duration-300 transform hover:-translate-y-1 hover:scale-105 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-darkAccent`}>
+<button class={`py-2 px-5 text-sm md:text-md bg-accentSecondary text-textColor rounded-full flex gap-2 items-center justify-center shadow-lg hover:shadow-xl transition-all duration-300 transform hover:-translate-y-1 hover:scale-105 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-accentSecondary`}>
     <slot />
 </button>
