--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,11 +1,12 @@
 ---
 interface Props {
 	title: string;
-	description: string
+	description: string;
 }
-import '@fontsource-variable/onest';
-import Header from '../components/Header.astro';
-import Footer from '../components/Footer.astro';
+import "../globals.css";
+import "@fontsource-variable/onest";
+import Header from "../components/Header.astro";
+import Footer from "../components/Footer.astro";
 const { title, description } = Astro.props;
 ---
 
@@ -20,11 +21,7 @@ const { title, description } = Astro.props;
 		<title>{title}</title>
 	</head>
 	<body class="bg-bgColor text-textColor">
-		<div class="
-			absolute top-0 z-[-2] h-screen w-full 
-			bg-neutral-950 
-			bg-[radial-gradient(ellipse_70%_100%_at_50%_-5%,rgba(147,182,214,0.5),rgba(1,9,17,1))]"
-		/>
+		<div class="absolute top-0 z-[-2] h-screen w-full gradient"></div>
 		<Header />
 		<slot />
 		<Footer />
@@ -34,5 +31,13 @@ const { title, description } = Astro.props;
 	html {
 		font-family: "Onest Variable", system-ui, sans-serif;
 		scroll-behavior: smooth;
+	}
+
+	.gradient {
+		background: radial-gradient(
+			ellipse 70% 100% at 50% -5%,
+			rgba(var(--accent-primary), 0.5),
+			rgba(var(--bgColor), 1)
+		);
 	}
 </style>
