--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -25,10 +25,12 @@ import CurriculumIcon from "../icons/Curriculum.astro";
                     <span>LinkedIn</span>
                 </Button>
             </a>
-            <Button>
-                <CurriculumIcon class="size-5" />
-                <span>Curriculum</span>
-            </Button>
+            <a href="https://drive.google.com/file/d/1lIOeC2Z8CTpu57AS4GCy8hAgPnUnvz1O/view?usp=sharing" target="_blank">
+                <Button>
+                    <CurriculumIcon class="size-5" />
+                    <span>Curriculum</span>
+                </Button>
+            </a>
         </n>
     </div>
 </footer>
