--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -34,10 +34,12 @@ import projects from "../data/projects.json"
 						<span>LinkedIn</span>
 					</Button>
 				</a>
-				<Button>
-					<CurriculumIcon class="size-5" />
-					<span>Curriculum</span>
-				</Button>
+				<a href="https://drive.google.com/file/d/1lIOeC2Z8CTpu57AS4GCy8hAgPnUnvz1O/view?usp=sharing" target="_blank">
+					<Button>
+						<CurriculumIcon class="size-5" />
+						<span>Curriculum</span>
+					</Button>
+				</a>
 			</div>
 		</SectionContainer>
 		<SectionContainer class="section" id="proyectos">
