add notion to skills section

--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -26,6 +26,7 @@ import FigmaIcon from "../icons/tech/Figma.astro";
 import PhotoshopIcon from "../icons/tech/Photoshop.astro";
 
 import Tooltip from "./Tooltip.astro";
+import Notion from "../icons/tech/Notion.astro";
 
 const programming = {
     javascript: JavascriptIcon,
@@ -60,7 +61,8 @@ const database = {
 const tools = {
     git: GitIcon,
     figma: FigmaIcon,
-    photoshop: PhotoshopIcon
+    photoshop: PhotoshopIcon,
+    notion: Notion
 };
 ---
 
