--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -74,3 +74,5 @@ import projects from "../data/projects.json"
 		</SectionContainer>
 	</main>
 </Layout>
+
+<script type="module" src="/src/utils/animateSections.ts" lang="ts" defer />
