--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,6 +1,6 @@
 <header class="mt-6 sticky top-6 flex justify-center z-20">
     <nav
-        class="text-textColor bg-accentSecondary/80 backdrop-blur-sm rounded-full border border-accentPrimary border-opacity-70 shadow-xl flex justify-center items-center py-1 px-5 gap-3 font-medium text-sm md:text-md"
+        class="text-textColor bg-accentSecondary/80 backdrop-blur-sm rounded-full border border-accentPrimary border-opacity-70 shadow-xl flex justify-center items-center py-1 px-5 gap-3 font-medium text-sm md:text-md animated-section fade-in-bottom"
     >
         <a
             href="#proyectos"
