--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -48,7 +48,7 @@ const { title, description, code, demo, image } = Astro.props;
 const tech: Array<keyof typeof icons> = Astro.props.tech;
 ---
 
-<div class="flex flex-col md:flex-row gap-5">
+<div class="flex flex-col md:flex-row gap-5 animated-section fade-in-right">
     <div
         class="block w-full md:w-96 h-64 bg-gradient-to-tr from-secondary to-primary rounded-xl overflow-hidden relative"
     >
