--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -67,7 +67,7 @@ const tools = {
 ---
 
 <div class="mt-6 grid grid-cols-1 md:grid-cols-3 gap-5 md:gap-y-12">
-    <div class="flex flex-col items-center gap-2">
+    <div class="flex flex-col items-center gap-2 delay-1 animated-section fade-in">
         <h4 class="md:text-xl">Programación</h4>
         <div class="flex items-center gap-3">
             {
@@ -80,7 +80,7 @@ const tools = {
             }
         </div>
     </div>
-    <div class="flex flex-col items-center gap-2">
+    <div class="flex flex-col items-center gap-2 delay-2 animated-section fade-in">
         <h4 class="md:text-xl">Frontend</h4>
         <div class="flex items-center gap-3">
             {
@@ -93,7 +93,7 @@ const tools = {
             }
         </div>
     </div>
-    <div class="flex flex-col items-center gap-2">
+    <div class="flex flex-col items-center gap-2 delay-3 animated-section fade-in">
         <h4 class="md:text-xl">Backend</h4>
         <div class="flex items-center gap-3">
             {
@@ -106,7 +106,7 @@ const tools = {
             }
         </div>
     </div>
-    <div class="flex flex-col items-center gap-2">
+    <div class="flex flex-col items-center gap-2 delay-4 animated-section fade-in">
         <h4 class="md:text-xl">Bases de datos</h4>
         <div class="flex items-center gap-3">
             {
@@ -119,7 +119,7 @@ const tools = {
             }
         </div>
     </div>
-    <div class="flex flex-col items-center gap-2">
+    <div class="flex flex-col items-center gap-2 delay-5 animated-section fade-in">
         <h4 class="md:text-xl">Herramientas</h4>
         <div class="flex items-center gap-3">
             {
