add svelte icon

--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -27,6 +27,7 @@ import PhotoshopIcon from "../icons/tech/Photoshop.astro";
 
 import Tooltip from "./Tooltip.astro";
 import Notion from "../icons/tech/Notion.astro";
+import Svelte from "../icons/tech/Svelte.astro";
 
 const programming = {
     javascript: JavascriptIcon,
@@ -43,7 +44,8 @@ const frontend = {
     bootstrap: BootstrapIcon,
     sass: SassIcon,
     reactjs: ReactjsIcon,
-    astro: AstroIcon
+    astro: AstroIcon,
+    svelte: Svelte
 };
 
 const backend = {
