fix animateSections import

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -75,4 +75,4 @@ import projects from "../data/projects.json"
 	</main>
 </Layout>
 
-<script type="module" src="/src/utils/animateSections.ts" lang="ts" defer />
+<script type="module" src="src/utils/animateSections" lang="ts" defer />
