--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -75,4 +75,26 @@ import projects from "../data/projects.json"
 	</main>
 </Layout>
 
-<script type="module" src="src/utils/animateSections" lang="ts" defer />
+<script>
+	const animatedSections = document.querySelectorAll('.animated-section');
+
+if (animatedSections.length > 0) {
+    const observer = new IntersectionObserver(
+        (entries, observer) => {
+            entries.forEach((entry) => {
+                if (entry.isIntersecting) {
+                    if (entry.target.classList.contains('fade-in-left')) entry.target.classList.add('animate-left');
+                    if (entry.target.classList.contains('fade-in-right')) entry.target.classList.add('animate-right');
+                    if (entry.target.classList.contains('fade-in-bottom')) entry.target.classList.add('animate-in-bottom');
+                    if (entry.target.classList.contains('fade-in')) entry.target.classList.add('animate-in');
+                    observer.unobserve(entry.target);
+                }
+            });
+        },
+        {
+            threshold: 0.45,
+        }
+    );
+    animatedSections.forEach((section) => observer.observe(section));
+}
+</script>
