fix overflow x when animation is triggered

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,7 +16,7 @@ import projects from "../data/projects.json"
 ---
 
 <Layout title="Agustín Gómez | Desarrollador web" description="">
-	<main class="px-4">
+	<main class="px-4 overflow-x-hidden">
 		<SectionContainer class="section">
 			<h1 class="font-extrabold text-5xl md:text-7xl">Agustín Gómez</h1>
 			<h2 class="font-medium text-2xl md:text-4xl">Desarrollador web</h2>
